--- a/src/VBox/Frontends/VirtualBox/Makefile.kmk
+++ b/src/VBox/Frontends/VirtualBox/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 32789 2010-09-28 12:55:42Z noreply@oracle.com $
+# $Id: Makefile.kmk 32814 2010-09-29 12:34:52Z sergey.dubov@oracle.com $
 ## @file
 # Makefile for the VirtualBox Qt GUI.
 #
@@ -282,7 +282,7 @@ VirtualBox_QT_MOCHDRS = \
 	src/extensions/QIWizard.h \
 	src/settings/UISettingsDialog.h \
 	src/settings/UISettingsDialogSpecific.h \
-	src/settings/VBoxSettingsPage.h \
+	src/settings/UISettingsPage.h \
 	src/settings/VBoxSettingsSelector.h \
 	src/settings/global/VBoxGLSettingsGeneral.h \
 	src/settings/global/VBoxGLSettingsInput.h \
