FreeBSD: Support 2D video acceleration (Thanks to Sean C. Farley and Bernhard Froehlich)
svn:sync-xref-src-repo-rev: r66292

--- a/src/VBox/Frontends/VirtualBox/Makefile.kmk
+++ b/src/VBox/Frontends/VirtualBox/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 32814 2010-09-29 12:34:52Z sergey.dubov@oracle.com $
+# $Id: Makefile.kmk 32833 2010-09-29 21:37:58Z alexander.eichner@oracle.com $
 ## @file
 # Makefile for the VirtualBox Qt GUI.
 #
@@ -239,6 +239,7 @@ if defined(VBOX_WITH_VIDEOHWACCEL) || defined(VBOX_GUI_USE_QGL)
  VirtualBox_LIBS.win     += $(PATH_SDK_WINPSDK_LIB)/Opengl32.lib
  VirtualBox_LIBS.solaris += GL
  VirtualBox_LIBS.linux   += GL
+ VirtualBox_LIBS.freebsd += GL
 endif
 
 # Headers containing definitions of classes that use the Q_OBJECT macro.
@@ -888,7 +889,7 @@ endif # darwin
 # App for testing GL support
 #
 if defined(VBOX_WITH_VIDEOHWACCEL)
- if1of ($(KBUILD_TARGET), win linux)
+ if1of ($(KBUILD_TARGET), win linux freebsd)
   LIBRARIES += VBoxOGL2D
   VBoxOGL2D_TEMPLATE = VBOXR3STATIC
   VBoxOGL2D_USES = qt4
