--- a/src/VBox/Additions/WINNT/VBoxTray/Makefile.kmk
+++ b/src/VBox/Additions/WINNT/VBoxTray/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 32622 2010-09-17 20:18:39Z noreply@oracle.com $
+# $Id: Makefile.kmk 32881 2010-10-04 09:01:02Z knut.osmundsen@oracle.com $
 ## @file
 # Sub-Makefile for VBoxTray.
 #
@@ -58,6 +58,7 @@ ifdef VBOX_WITH_WDDM
  VBoxTray_DEFS   += VBOX_WITH_WDDM
  # VBoxTray_DEFS   += LOG_ENABLED
  # we need only includes for PFND3DKMT stuff as all we link dynamicaly to it
+ include $(KBUILD_PATH)/sdks/WINDDK.kmk
  VBoxTray_INCS   += $(PATH_SDK_WINDDK_INC_API) $(PATH_SDK_WINDDK_INC_DDK)
 endif
 # VBoxTray.cpp uses VBOX_SVN_REV.
