--- a/src/VBox/Additions/WINNT/Graphics/Display/Makefile.kmk
+++ b/src/VBox/Additions/WINNT/Graphics/Display/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 32877 2010-10-01 22:51:28Z noreply@oracle.com $
+# $Id: Makefile.kmk 32889 2010-10-04 23:14:12Z noreply@oracle.com $
 ## @file
 # Sub-Makefile for VBoxDisp.dll.
 #
@@ -86,6 +86,9 @@ ifdef VBOX_WITH_VIDEOHWACCEL
 endif
 ifdef VBOX_WDDMDISP_WITH_PROFILE
  VBoxDispD3D_DEFS   += VBOX_WDDMDISP_WITH_PROFILE
+endif
+ifdef VBOXWDDM_TEST_UHGSMI
+ VBoxDispD3D_DEFS   += VBOXWDDM_TEST_UHGSMI
 endif
 VBoxDispD3D_SOURCES  = \
 	wddm/VBoxDispD3D.cpp \
