--- a/src/VBox/Devices/Makefile.kmk
+++ b/src/VBox/Devices/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 32904 2010-10-05 10:34:28Z noreply@oracle.com $
+# $Id: Makefile.kmk 32923 2010-10-05 14:20:01Z knut.osmundsen@oracle.com $
 ## @file
 # Top-level sub-makefile for the devices, drivers and services.
 #
@@ -457,7 +457,7 @@ ifdef VBOX_WITH_DTRACE_R3
  DevicesR3_DEFS        += VBOX_WITH_DTRACE
  DevicesR3_INCS        += $(DevicesR3_0_OUTDIR)
  DevicesR3_INTERMEDIATES += $(DevicesR3_0_OUTDIR)/VBoxDD-dtrace.h
- $$(DevicesR3_0_OUTDIR)/VBoxDD-dtrace.h: $(PATH_CURRENT)/VBoxDD-dtrace.d | $$(dir $$@)
+ $$(DevicesR3_0_OUTDIR)/VBoxDD-dtrace.h: $(PATH_SUB_CURRENT)/VBoxDD-dtrace.d | $$(dir $$@)
 	dtrace -C -h -o $@ -s $<
 endif
 
@@ -587,7 +587,7 @@ ifdef VBOX_WITH_RAW_MODE
  ifdef VBOX_WITH_VDMA
   VBoxDDGC_DEFS        += VBOX_WITH_VDMA
  endif
- 
+
  ifdef VBOXWDDM_WITH_VBVA
   VBoxDDGC_DEFS         += VBOXWDDM_WITH_VBVA
  endif
