Runtime/Process: Solaris: put every detached process in its own process contract so that independent processes don't get killed if some service is terminated
svn:sync-xref-src-repo-rev: r66500

--- a/src/VBox/Runtime/Makefile.kmk
+++ b/src/VBox/Runtime/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 32970 2010-10-07 10:08:00Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 32990 2010-10-07 16:36:21Z klaus.espenlaub@oracle.com $
 ## @file
 # Sub-Makefile for the IPRT (IPRT).
 #
@@ -1082,7 +1082,8 @@ VBoxRT_LIBS.freebsd            = \
 	iconv \
 	rt
 VBoxRT_LIBS.solaris            = \
-	kstat
+	kstat \
+        contract
 ifn1of ($(KBUILD_TARGET_ARCH), sparc32 sparc64)
  # SMBIOS not available on Solaris SPARC.
  VBoxRT_LIBS.solaris += smbios
