Additions/VBoxService: Solaris: the R3 runtime needs libcontract
svn:sync-xref-src-repo-rev: r66501

--- a/src/VBox/Additions/common/VBoxService/Makefile.kmk
+++ b/src/VBox/Additions/common/VBoxService/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 32656 2010-09-21 08:47:18Z andreas.loeffler@oracle.com $
+# $Id: Makefile.kmk 32991 2010-10-07 17:08:56Z klaus.espenlaub@oracle.com $
 ## @file
 # Sub-Makefile for the Cross Platform Guest Addition Services.
 #
@@ -126,7 +126,7 @@ ifdef VBOX_WITH_GUEST_PROPS
  	WtsApi32.lib \
  	Psapi.lib
  VBoxService_LIBS.solaris += \
- 	nsl kstat
+ 	nsl kstat contract
 endif
 
 #
