IPRT: Added ISO 9660 FS support.
svn:sync-xref-src-repo-rev: r66508

--- a/src/VBox/Runtime/Makefile.kmk
+++ b/src/VBox/Runtime/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 32990 2010-10-07 16:36:21Z klaus.espenlaub@oracle.com $
+# $Id: Makefile.kmk 32997 2010-10-08 08:26:59Z andreas.loeffler@oracle.com $
 ## @file
 # Sub-Makefile for the IPRT (IPRT).
 #
@@ -386,6 +386,7 @@ RuntimeR3_SOURCES       = \
 	r3/fileio.cpp \
 	r3/fs.cpp \
 	r3/init.cpp \
+	r3/isofs.cpp \
 	r3/path.cpp \
 	r3/process.cpp \
 	r3/socket.cpp \
