--- a/src/VBox/Runtime/Makefile.kmk
+++ b/src/VBox/Runtime/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 33011 2010-10-08 15:42:24Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 33033 2010-10-11 09:55:12Z knut.osmundsen@oracle.com $
 ## @file
 # Sub-Makefile for the IPRT (IPRT).
 #
@@ -1429,6 +1429,8 @@ RuntimeR0Drv_SOURCES.linux = \
 	common/err/RTErrConvertFromErrno.cpp \
 	generic/RTAssertShouldPanic-generic.cpp \
 	generic/RTLogWriteStdOut-stub-generic.cpp \
+ 	generic/RTSemEventWait-2-ex-generic.cpp \
+ 	generic/RTSemEventWaitNoResume-2-ex-generic.cpp \
  	generic/RTSemEventMultiWait-2-ex-generic.cpp \
  	generic/RTSemEventMultiWaitNoResume-2-ex-generic.cpp \
 	generic/mppresent-generic.cpp \
