--- a/src/VBox/Devices/Makefile.kmk
+++ b/src/VBox/Devices/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 32927 2010-10-05 14:47:23Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 33037 2010-10-11 10:28:22Z noreply@oracle.com $
 ## @file
 # Top-level sub-makefile for the devices, drivers and services.
 #
@@ -429,6 +429,10 @@ ifdef VBOX_WITH_EFI
  EFI/DevEFI.cpp_INCS       += EFI/tools/include
  EFI/DevEFI.cpp_INCS.x86   += EFI/tools/include/Ia32
  EFI/DevEFI.cpp_INCS.amd64 += EFI/tools/include/X64
+endif
+
+ifdef VBOX_WITH_MSI_DEVICES
+ DevicesR3_DEFS        += VBOX_WITH_MSI_DEVICES
 endif
 
 ifdef VBOX_WITH_DYNAMIC_DSDT
