--- a/src/VBox/Additions/WINNT/Graphics/Display/Makefile.kmk
+++ b/src/VBox/Additions/WINNT/Graphics/Display/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 32889 2010-10-04 23:14:12Z noreply@oracle.com $
+# $Id: Makefile.kmk 33048 2010-10-11 20:57:20Z noreply@oracle.com $
 ## @file
 # Sub-Makefile for VBoxDisp.dll.
 #
@@ -56,13 +56,8 @@ VBoxDisp_LDFLAGS.x86   = /Entry:DrvEnableDriver@12
 VBoxDisp_LDFLAGS.amd64 = /Entry:DrvEnableDriver
 VBoxDisp_LIBS = \
 	$(PATH_SDK_W2K3DDK_LIB)/win32k.lib \
-	$(VBOX_LIB_IPRT_GUEST_R0)
-
-ifdef VBOX_WITH_HGSMI
-VBoxDisp_LIBS         += \
+	$(VBOX_LIB_IPRT_GUEST_R0) \
 	$(VBOX_PATH_ADDITIONS_LIB)/HGSMIGuestR0Lib$(VBOX_SUFF_LIB)
-VBoxDisp_DEFS += VBOX_WITH_HGSMI
-endif
 
 ifdef VBOX_WITH_WDDM
 
