Main;OVF/OVA: online calculation of the SHA1 sum; directly stream into the ova (no temporary files anymore); cache writing
svn:sync-xref-src-repo-rev: r66587

--- a/src/VBox/Main/Makefile.kmk
+++ b/src/VBox/Main/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 32866 2010-10-01 14:41:42Z andreas.loeffler@oracle.com $
+# $Id: Makefile.kmk 33060 2010-10-12 12:17:49Z noreply@oracle.com $
 ## @file
 # Makefile for the VBox Main module.
 #
@@ -283,6 +283,7 @@ VBoxSVC_SOURCES = \
 	VirtualBoxErrorInfoImpl.cpp \
 	VirtualBoxImpl.cpp \
 	ApplianceImpl.cpp \
+	ApplianceImplIO.cpp \
 	ApplianceImplExport.cpp \
 	ApplianceImplImport.cpp \
 	xml/ovfreader.cpp \
