--- a/src/VBox/GuestHost/OpenGL/Makefile.kmk
+++ b/src/VBox/GuestHost/OpenGL/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 32694 2010-09-22 10:40:31Z noreply@oracle.com $
+# $Id: Makefile.kmk 33116 2010-10-13 21:06:35Z noreply@oracle.com $
 ## @file
 # Sub-Makefile for the VirtualBox Guest/Host OpenGL part
 #
@@ -76,6 +76,7 @@ VBoxOGLcrutil_SOURCES       = \
 	util/url.c \
 	util/warp.c \
 	util/vboxhgcm.c \
+	$(if $(VBOX_WITH_CRHGSMI),util/vboxhgsmi.c,) \
 	$(VBOX_PATH_CROGL_GENFILES)/debug_opcodes.c
 VBoxOGLcrutil_SOURCES.win.x86 = \
 	util/util.def \
@@ -87,6 +88,10 @@ VBoxOGLcrutil_LIBS = \
 	$(VBOX_LIB_IPRT_GUEST_R3_SHARED) \
 	$(VBOX_LIB_VBGL_R3_SHARED) \
 	$(VBOX_LIB_IPRT_GUEST_R3_SHARED)
+ifdef VBOX_WITH_CRHGSMI
+VBoxOGLcrutil_DEFS    += VBOX_WITH_CRHGSMI 
+VBoxOGLcrutil_LIBS    += $(VBOX_PATH_ADDITIONS_LIB)/VBoxCrHgsmi$(VBOX_SUFF_LIB)
+endif
 VBoxOGLcrutil_CLEAN = \
 	$(VBOX_PATH_CROGL_GENFILES)/debug_opcodes.c
 
