--- a/src/VBox/Additions/common/VBoxService/Makefile.kmk
+++ b/src/VBox/Additions/common/VBoxService/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 33064 2010-10-12 13:20:50Z andreas.loeffler@oracle.com $
+# $Id: Makefile.kmk 33128 2010-10-14 12:12:09Z andreas.loeffler@oracle.com $
 ## @file
 # Sub-Makefile for the Cross Platform Guest Addition Services.
 #
@@ -34,7 +34,7 @@ PROGRAMS.win.x86 += VBoxServiceNT
 #
 VBoxService_TEMPLATE      = VBOXGUESTR3EXE
 VBoxService_DEFS          = VBOX_WITH_HGCM VBOXSERVICE_TIMESYNC VBOXSERVICE_MANAGEMENT
-VBoxService_DEFS.win     += _WIN32_WINNT=0x0501
+VBoxService_DEFS.win     += _WIN32_WINNT=0x0501 VBOXSERVICE_TOOLBOX
 VBoxService_DEFS.os2      = VBOX_WITH_HGCM VBOXSERVICE_CLIPBOARD
 ifdef VBOX_WITH_GUEST_PROPS
  VBoxService_DEFS        += VBOX_WITH_GUEST_PROPS VBOXSERVICE_VMINFO
@@ -103,7 +103,8 @@ endif
 
 VBoxService_SOURCES.win  += \
 	VBoxService-win.rc \
-	VBoxService-win.cpp
+	VBoxService-win.cpp \
+	VBoxServiceToolBox.cpp
 
 VBoxService_SOURCES.os2   = \
 	VBoxService-os2.def \
