--- a/src/VBox/HostServices/SharedOpenGL/Makefile.kmk
+++ b/src/VBox/HostServices/SharedOpenGL/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 32175 2010-09-01 13:01:45Z noreply@oracle.com $
+# $Id: Makefile.kmk 33146 2010-10-15 10:34:58Z noreply@oracle.com $
 ## @file
 # Sub-Makefile for the VirtualBox HGCM Service.
 #
@@ -89,6 +89,9 @@ endif
 ifdef VBOX_WITH_XPCOM
  VBoxSharedCrOpenGL_LIBS += \
 	$(LIB_XPCOM)
+endif
+ifdef VBOX_WITH_CRHGSMI
+VBoxSharedCrOpenGL_DEFS += VBOX_WITH_CRHGSMI
 endif
 
 #
