--- a/src/VBox/Runtime/Makefile.kmk
+++ b/src/VBox/Runtime/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 33153 2010-10-15 11:42:46Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 33155 2010-10-15 12:07:44Z knut.osmundsen@oracle.com $
 ## @file
 # Sub-Makefile for the IPRT (IPRT).
 #
@@ -1491,7 +1491,8 @@ RuntimeR0Drv_SOURCES.win = \
 	r0drv/nt/thread-r0drv-nt.cpp \
 	r0drv/nt/thread2-r0drv-nt.cpp \
 	r0drv/nt/time-r0drv-nt.cpp \
-	r0drv/nt/timer-r0drv-nt.cpp
+	r0drv/nt/timer-r0drv-nt.cpp \
+	r0drv/nt/RTTimerGetSystemGranularity-r0drv-nt.cpp
 
 RuntimeR0Drv_SOURCES.win.amd64 = $(RuntimeWin64ASM_SOURCES)
 RuntimeR0Drv_SOURCES.win.x86   = $(RuntimeWin32ASM_SOURCES)
