--- a/src/VBox/Installer/linux/Makefile.kmk
+++ b/src/VBox/Installer/linux/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 32547 2010-09-16 10:24:36Z noreply@oracle.com $
+# $Id: Makefile.kmk 33185 2010-10-18 08:40:50Z noreply@oracle.com $
 ## @file
 # Makefile for the Linux installer.
 #
@@ -183,12 +183,15 @@ ifdef VBOX_WITH_DOCS_PACKING
 	$(if $(VBOX_WITH_KCHMVIEWER),kchmviewer,)
 endif
 
+# auth stuff
+VBOX_LNX_STRIP_BIN += \
+	VBoxAuth.so \
+	VBoxAuthSimple.so
+
 # VRDP
 ifdef VBOX_WITH_VRDP
  VBOX_LNX_STRIP_BIN += \
-	VBoxVRDP.so \
-	VRDPAuth.so \
-	VRDPAuthSimple.so
+	VBoxVRDP.so
  ifdef VBOX_WITH_VRDP_RDESKTOP
   VBOX_LNX_NO_STRIP += \
 	rdesktop-vrdp.tar.gz
