--- a/src/VBox/Additions/WINNT/Graphics/Display/Makefile.kmk
+++ b/src/VBox/Additions/WINNT/Graphics/Display/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 33117 2010-10-13 21:20:52Z noreply@oracle.com $
+# $Id: Makefile.kmk 33241 2010-10-19 16:37:06Z noreply@oracle.com $
 ## @file
 # Sub-Makefile for VBoxDisp.dll.
 #
@@ -85,20 +85,21 @@ endif
 ifdef VBOXWDDM_TEST_UHGSMI
  VBoxDispD3D_DEFS   += VBOXWDDM_TEST_UHGSMI
 endif
-ifdef VBOX_WITH_CRHGSMI
- VBoxDispD3D_DEFS   += VBOX_WITH_CRHGSMI
-endif
 VBoxDispD3D_SOURCES  = \
 	wddm/VBoxDispD3D.cpp \
     wddm/VBoxDispD3DIf.cpp \
     wddm/VBoxDispCm.cpp \
     wddm/VBoxDispMp.cpp \
     wddm/VBoxScreen.cpp \
-    $(if $(VBOX_WITH_CRHGSMI),wddm/VBoxUhgsmiDisp.cpp,) \
-    $(if $(VBOX_WITH_CRHGSMI),wddm/VBoxUhgsmiKmt.cpp,) \
     wddm/VBoxDispMpTst.cpp \
 	wddm/VBoxDispD3D.def \
 	wddm/VBoxDispD3D.rc
+#ifdef VBOX_WITH_CRHGSMI
+#VBoxDispD3D_SOURCES += \
+#    wddm/VBoxUhgsmiDisp.cpp \
+#    wddm/VBoxUhgsmiKmt.cpp
+#VBoxDispD3D_DEFS   += VBOX_WITH_CRHGSMI
+#endif
 VBoxDispD3D_LIBS     = \
 	$(VBOX_LIB_IPRT_GUEST_R3) \
 	$(VBOX_LIB_VBGL_R3)
