--- a/src/VBox/Additions/common/VBoxService/Makefile.kmk
+++ b/src/VBox/Additions/common/VBoxService/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 33247 2010-10-20 10:01:48Z andreas.loeffler@oracle.com $
+# $Id: Makefile.kmk 33256 2010-10-20 11:33:46Z andreas.loeffler@oracle.com $
 ## @file
 # Sub-Makefile for the Cross Platform Guest Addition Services.
 #
@@ -33,8 +33,8 @@ PROGRAMS.win.x86 += VBoxServiceNT
 # VBoxService
 #
 VBoxService_TEMPLATE      = VBOXGUESTR3EXE
-VBoxService_DEFS          = LOG_TO_BACKDOOR VBOX_WITH_HGCM VBOXSERVICE_TIMESYNC VBOXSERVICE_MANAGEMENT
-VBoxService_DEFS.win     += _WIN32_WINNT=0x0501 VBOXSERVICE_TOOLBOX
+VBoxService_DEFS          = LOG_TO_BACKDOOR VBOX_WITH_HGCM VBOXSERVICE_TIMESYNC VBOXSERVICE_MANAGEMENT VBOXSERVICE_TOOLBOX
+VBoxService_DEFS.win     += _WIN32_WINNT=0x0501
 VBoxService_DEFS.os2      = VBOX_WITH_HGCM VBOXSERVICE_CLIPBOARD
 ifdef VBOX_WITH_GUEST_PROPS
  VBoxService_DEFS        += VBOX_WITH_GUEST_PROPS VBOXSERVICE_VMINFO
