Runtime: add lock free circular buffer + simple testcase
svn:sync-xref-src-repo-rev: r66854

--- a/src/VBox/Runtime/testcase/Makefile.kmk
+++ b/src/VBox/Runtime/testcase/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 33130 2010-10-14 13:11:33Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 33286 2010-10-21 09:48:00Z noreply@oracle.com $
 ## @file
 # Sub-Makefile for the IPRT testcases.
 #
@@ -113,7 +113,8 @@ PROGRAMS += \
 	tstTimerLR \
 	tstRTTimeSpec \
 	tstUtf8 \
-	tstRTUuid
+	tstRTUuid \
+	tstRTCircBuf
 
 PROGRAMS.win += \
 	tstRTProcWait \
@@ -467,6 +468,9 @@ tstRTUuid_TEMPLATE = VBOXR3TSTEXE
 tstRTUuid_SOURCES = tstRTUuid.cpp
 
 tstUtf8_SOURCES = tstUtf8.cpp
+
+tstRTCircBuf_TEMPLATE = VBOXR3TSTEXE
+tstRTCircBuf_SOURCES = tstRTCircBuf.cpp
 
 tstRTCoreDump_TEMPLACE = VBOXR3TSTEXE
 tstRTCoreDump_SOURCES = tstRTCoreDump.cpp
