--- a/src/VBox/Runtime/Makefile.kmk
+++ b/src/VBox/Runtime/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 33279 2010-10-20 21:37:58Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 33287 2010-10-21 09:50:39Z noreply@oracle.com $
 ## @file
 # Sub-Makefile for the IPRT (IPRT).
 #
@@ -276,6 +276,7 @@ RuntimeR3_SOURCES       = \
 	common/misc/sanity-cpp.cpp \
 	common/misc/semspingpong.cpp \
 	common/misc/sg.cpp \
+	common/misc/circbuf.cpp \
 	common/misc/thread.cpp \
 	common/misc/zip.cpp \
 	common/misc/term.cpp \
