--- a/src/VBox/Runtime/testcase/Makefile.kmk
+++ b/src/VBox/Runtime/testcase/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 33286 2010-10-21 09:48:00Z noreply@oracle.com $
+# $Id: Makefile.kmk 33290 2010-10-21 10:20:17Z noreply@oracle.com $
 ## @file
 # Sub-Makefile for the IPRT testcases.
 #
@@ -114,7 +114,8 @@ PROGRAMS += \
 	tstRTTimeSpec \
 	tstUtf8 \
 	tstRTUuid \
-	tstRTCircBuf
+	tstRTCircBuf \
+	tstRTManifest
 
 PROGRAMS.win += \
 	tstRTProcWait \
@@ -471,6 +472,9 @@ tstUtf8_SOURCES = tstUtf8.cpp
 
 tstRTCircBuf_TEMPLATE = VBOXR3TSTEXE
 tstRTCircBuf_SOURCES = tstRTCircBuf.cpp
+
+tstRTManifest_TEMPLATE = VBOXR3TSTEXE
+tstRTManifest_SOURCES = tstRTManifest.cpp
 
 tstRTCoreDump_TEMPLACE = VBOXR3TSTEXE
 tstRTCoreDump_SOURCES = tstRTCoreDump.cpp
