VBoxManage: its import and export
svn:sync-xref-src-repo-rev: r66940

--- a/src/VBox/Frontends/VBoxManage/Makefile.kmk
+++ b/src/VBox/Frontends/VBoxManage/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 32866 2010-10-01 14:41:42Z andreas.loeffler@oracle.com $
+# $Id: Makefile.kmk 33356 2010-10-22 13:49:59Z noreply@oracle.com $
 ## @file
 # Sub-Makefile for VBoxManage (the cli frontend).
 #
@@ -41,7 +41,7 @@ else # !VBOX_ONLY_DOCS
 	$(if $(VBOX_WITH_GUEST_CONTROL),VBoxManageGuestCtrl.cpp) \
  	VBoxManageHelp.cpp \
  	VBoxManageHostonly.cpp \
- 	VBoxManageImport.cpp \
+ 	VBoxManageAppliance.cpp \
  	VBoxManageInfo.cpp \
  	VBoxManageList.cpp \
  	VBoxManageMetrics.cpp \
