--- a/src/VBox/Devices/testcase/Makefile.kmk
+++ b/src/VBox/Devices/testcase/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 32471 2010-09-14 10:26:07Z noreply@oracle.com $
+# $Id: Makefile.kmk 33360 2010-10-22 14:54:12Z knut.osmundsen@oracle.com $
 ## @file
 # Sub-Makefile for the device testcases.
 #
@@ -51,6 +51,9 @@ ifdef VBOX_WITH_RAW_MODE
  ifdef VBOX_WITH_USB
   tstDeviceStructSizeRC_DEFS    += VBOX_WITH_USB
  endif
+ ifdef VBOX_WITH_EHCI
+  tstDeviceStructSizeRC_DEFS    += VBOX_WITH_EHCI
+ endif
  ifdef VBOX_WITH_AHCI
   tstDeviceStructSizeRC_DEFS    += VBOX_WITH_AHCI
  endif
@@ -90,6 +93,9 @@ tstDeviceStructSize_TEMPLATE = VBOXR3AUTOTST
 tstDeviceStructSize_DEFS     =
 ifdef VBOX_WITH_USB
  tstDeviceStructSize_DEFS   += VBOX_WITH_USB
+endif
+ifdef VBOX_WITH_EHCI
+ tstDeviceStructSize_DEFS   += VBOX_WITH_EHCI
 endif
 ifdef VBOX_WITH_AHCI
  tstDeviceStructSize_DEFS   += VBOX_WITH_AHCI
