--- a/src/VBox/Additions/common/VBoxGuest/freebsd/Makefile
+++ b/src/VBox/Additions/common/VBoxGuest/freebsd/Makefile
@@ -1,4 +1,4 @@
-# $Id: Makefile 31518 2010-08-10 11:34:07Z knut.osmundsen@oracle.com $
+# $Id: Makefile 33376 2010-10-24 12:55:23Z alexander.eichner@oracle.com $
 ## @file
 # VirtualBox Guest Additions Module Makefile.
 #
@@ -112,6 +112,10 @@ SRCS += \
 	RTLogWriteStdErr-stub-generic.c \
 	RTRandAdvCreateSystemFaster-generic.c \
 	RTRandAdvCreateSystemTruer-generic.c \
+    RTSemEventWait-2-ex-generic.c \
+    RTSemEventWaitNoResume-2-ex-generic.c \
+    RTSemEventMultiWait-2-ex-generic.c \
+    RTSemEventMultiWaitNoResume-2-ex-generic.c \
 	RTTimerCreate-generic.c \
 	timer-generic.c \
 	mppresent-generic.c
