--- a/src/VBox/Runtime/Makefile.kmk
+++ b/src/VBox/Runtime/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 33287 2010-10-21 09:50:39Z noreply@oracle.com $
+# $Id: Makefile.kmk 33393 2010-10-24 16:17:00Z knut.osmundsen@oracle.com $
 ## @file
 # Sub-Makefile for the IPRT (IPRT).
 #
@@ -1321,7 +1321,6 @@ RuntimeR0_SOURCES.win = \
 	nt/NtProcessStartup-stub.cpp
 
 RuntimeR0_SOURCES.os2 = \
-	os2/RTErrConvertFromOS2.cpp \
 	os2/sys0.asm
 
 
