--- a/src/VBox/Additions/common/VBoxGuest/Makefile.kmk
+++ b/src/VBox/Additions/common/VBoxGuest/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 32693 2010-09-22 10:36:52Z noreply@oracle.com $
+# $Id: Makefile.kmk 33395 2010-10-24 16:18:01Z knut.osmundsen@oracle.com $
 ## @file
 # Makefile for the Cross Platform Guest Additions Driver.
 #
@@ -78,8 +78,6 @@ if1of ($(KBUILD_TARGET), freebsd $(if $(defined VBOX_WITH_ADDITION_DRIVERS),linu
   	VBoxGuest-$(KBUILD_TARGET)-pnp.cpp \
   	win/VBoxGuest.rc
   endif
-  VBoxGuest2.cpp_DEFS    = VBOX_SVN_REV=$(VBOX_SVN_REV)
-  VBoxGuest.cpp_DEFS     = VBOX_SVN_REV=$(VBOX_SVN_REV)
   VBoxGuest_LIBS        += \
   	$(VBOX_LIB_VBGL_R0BASE) \
   	$(VBOX_LIB_IPRT_GUEST_R0)
@@ -113,8 +111,12 @@ if1of ($(KBUILD_TARGET), freebsd $(if $(defined VBOX_WITH_ADDITION_DRIVERS),linu
   	$(PATH_ROOT)/src/VBox/Runtime/include # for the os2ddk
   VBoxGuestLibOs2Hack_SOURCES = \
   	VBoxGuest-os2.cpp \
-  	VBoxGuest.cpp
+  	VBoxGuest.cpp \
+  	VBoxGuest2.cpp
  endif # OS/2
+ 
+ VBoxGuest2.cpp_DEFS    = VBOX_SVN_REV=$(VBOX_SVN_REV)
+ VBoxGuest.cpp_DEFS     = VBOX_SVN_REV=$(VBOX_SVN_REV)
 
  ifeq ($(KBUILD_TARGET),win)
   #
