iprt/symlink.h: Initial code (only tested on linux).
svn:sync-xref-src-repo-rev: r67016

--- a/src/VBox/Runtime/testcase/Makefile.kmk
+++ b/src/VBox/Runtime/testcase/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 33290 2010-10-21 10:20:17Z noreply@oracle.com $
+# $Id: Makefile.kmk 33426 2010-10-25 14:32:38Z knut.osmundsen@oracle.com $
 ## @file
 # Sub-Makefile for the IPRT testcases.
 #
@@ -99,6 +99,7 @@ PROGRAMS += \
 	tstStrSimplePattern \
 	tstStrToNum \
 	tstRTStrVersion \
+	tstRTSymlink \
 	tstRTSystemQueryDmi \
 	tstRTSystemQueryOsInfo \
 	tstRTTcp-1 \
@@ -430,6 +431,9 @@ tstStrToNum_SOURCES = tstStrToNum.cpp
 
 tstRTStrVersion_TEMPLATE = VBOXR3TSTEXE
 tstRTStrVersion_SOURCES = tstRTStrVersion.cpp
+
+tstRTSymlink_TEMPLATE = VBOXR3TSTEXE
+tstRTSymlink_SOURCES = tstRTSymlink.cpp
 
 tstRTSystemQueryDmi_TEMPLATE = VBOXR3TSTEXE
 tstRTSystemQueryDmi_SOURCES = tstRTSystemQueryDmi.cpp
