--- a/src/VBox/Additions/linux/Makefile.kmk
+++ b/src/VBox/Additions/linux/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 32590 2010-09-17 11:24:09Z noreply@oracle.com $
+# $Id: Makefile.kmk 33430 2010-10-25 14:59:00Z noreply@oracle.com $
 ## @file
 # Makefile for the linux guest additions base directory.
 #
@@ -149,7 +149,7 @@ VBOX_ADD_STRIP_MOD.linux = \
 
 VBOX_ADD_MOD.linux = \
 	98vboxadd-xclient \
-	x11config-new.pl
+	x11config.sh
 
 VBOX_ADD_STRIP_OBJ.linux = \
 	vboxmouse_drv.o \
@@ -304,7 +304,7 @@ lnx_add_inst-exec_INST = $(subst $(PATH_TARGET),obj,$(VBOX_LNX_ADD_INST_MOD_DIR)
 lnx_add_inst-exec_MODE = a+rx,u+w
 lnx_add_inst-exec_SOURCES = \
 	$(VBOX_REL_X11_ADD_INST)98vboxadd-xclient \
-	$(VBOX_REL_X11_ADD_INST)x11config-new.pl
+	$(VBOX_REL_X11_ADD_INST)x11config.sh
 
 
 INSTALLS += lnx_add_inst-noexec
