--- a/src/VBox/Additions/linux/sharedfolders/Makefile.kmk
+++ b/src/VBox/Additions/linux/sharedfolders/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 32183 2010-09-01 15:53:42Z noreply@oracle.com $
+# $Id: Makefile.kmk 33439 2010-10-25 19:35:58Z noreply@oracle.com $
 ## @file
 # Sub-Makefile for the vboxsf (linux shared folders module).
 #
@@ -61,6 +61,7 @@ vboxsf_SOURCES         = \
 	vfsmod.c \
 	utils.c \
 	dirops.c \
+	lnkops.c \
 	regops.c
 vboxsf_LIBS            = \
 	$(VBOX_LIB_VBGL_R0)
