--- a/src/VBox/Runtime/Makefile.kmk
+++ b/src/VBox/Runtime/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 33426 2010-10-25 14:32:38Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 33450 2010-10-26 09:24:32Z knut.osmundsen@oracle.com $
 ## @file
 # Sub-Makefile for the IPRT (IPRT).
 #
@@ -296,6 +296,7 @@ RuntimeR3_SOURCES       = \
 	common/path/RTPathHaveExt.cpp \
 	common/path/RTPathHavePath.cpp \
 	common/path/RTPathJoin.cpp \
+	common/path/RTPathJoinA.cpp \
 	common/path/RTPathParse.cpp \
 	common/path/RTPathRealDup.cpp \
 	common/path/RTPathStartsWithRoot.cpp \
@@ -938,6 +939,7 @@ RuntimeGuestR3Mini_SOURCES = \
 	common/path/RTPathHaveExt.cpp \
 	common/path/RTPathHavePath.cpp \
 	common/path/RTPathJoin.cpp \
+	common/path/RTPathJoinA.cpp \
 	common/path/RTPathParse.cpp \
 	common/path/RTPathRealDup.cpp \
 	common/path/RTPathStripExt.cpp \
