--- a/src/VBox/Frontends/VirtualBox/Makefile.kmk
+++ b/src/VBox/Frontends/VirtualBox/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 33540 2010-10-28 09:27:05Z noreply@oracle.com $
+# $Id: Makefile.kmk 33542 2010-10-28 09:45:04Z noreply@oracle.com $
 ## @file
 # Makefile for the VirtualBox Qt GUI.
 #
@@ -198,7 +198,9 @@ VirtualBox_LIBS.linux += Xinerama
 VirtualBox_LIBS.solaris += Xinerama
 VirtualBox_LIBS.freebsd += Xinerama
 
+ifneq ($(KBUILD_TARGET),win)
 VirtualBox_CXXFLAGS += -Wno-switch
+endif
 
 ifdef VBOX_WITH_VIDEOHWACCEL
 # Necessary for save state support
