--- a/src/VBox/Runtime/testcase/Makefile.kmk
+++ b/src/VBox/Runtime/testcase/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 33426 2010-10-25 14:32:38Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 33563 2010-10-28 14:46:26Z knut.osmundsen@oracle.com $
 ## @file
 # Sub-Makefile for the IPRT testcases.
 #
@@ -67,6 +67,7 @@ PROGRAMS += \
 	tstRTHeapOffset \
 	tstRTHeapSimple \
 	tstRTInlineAsm \
+	tstIprtMiniString \
 	tstLdr \
 	tstLdrLoad \
 	tstRTList \
@@ -255,6 +256,9 @@ tstRTInlineAsmPIC3_TEMPLATE = VBOXR3TSTEXE
 tstRTInlineAsmPIC3_SOURCES = tstRTInlineAsm.cpp
 tstRTInlineAsmPIC3_CXXFLAGS = -fPIC -fomit-frame-pointer -O3
 tstRTInlineAsmPIC3_DEFS = PIC
+
+tstIprtMiniString_TEMPLATE = VBOXR3TSTEXE
+tstIprtMiniString_SOURCES = tstIprtMiniString.cpp
 
 tstLdr_SOURCES = tstLdr.cpp
 
