--- a/src/VBox/Makefile.kmk
+++ b/src/VBox/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 33380 2010-10-24 13:25:26Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 33567 2010-10-28 15:37:21Z alexander.eichner@oracle.com $
 ## @file
 # Top-level makefile for src/VBox.
 #
@@ -54,6 +54,7 @@ else
  endif
  include $(PATH_SUB_CURRENT)/Runtime/Makefile.kmk
  include $(PATH_SUB_CURRENT)/Disassembler/Makefile.kmk
+ include $(PATH_SUB_CURRENT)/Storage/Makefile.kmk
  if1of ($(KBUILD_TARGET_ARCH), amd64 x86)
   include $(PATH_SUB_CURRENT)/VMM/Makefile.kmk
   include $(PATH_SUB_CURRENT)/Devices/Makefile.kmk
