--- a/src/VBox/Storage/Makefile.kmk
+++ b/src/VBox/Storage/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 33567 2010-10-28 15:37:21Z alexander.eichner@oracle.com $
+# $Id: Makefile.kmk 33568 2010-10-28 15:44:48Z alexander.eichner@oracle.com $
 ## @file
 # Sub-Makefile for the Storage library.
 #
@@ -29,7 +29,7 @@ endif
 #
 LIBRARIES += StorageLib StorageLibNoDB
 
-StorageLib_TEMPLATE = VBoxR3Static
+StorageLib_TEMPLATE = VBOXR3STATIC
 StorageLib_SDKS.win = WINPSDK $(VBOX_WINDDK) VBOX_NTDLL
 StorageLib_DEFS     = IN_VBOXDDU
 StorageLib_SOURCES  = \
@@ -43,7 +43,7 @@ StorageLib_SOURCES  = \
 	RAW.cpp \
 	VCICache.cpp
 
-StorageLibNoDB_TEMPLATE = VBoxR3Static
+StorageLibNoDB_TEMPLATE = VBOXR3STATIC
 StorageLibNoDB_SDKS.win = WINPSDK $(VBOX_WINDDK)
 StorageLibNoDB_DEFS     = IN_VBOXDDU VBOX_HDD_NO_DYNAMIC_BACKENDS
 StorageLibNoDB_SOURCES  = \
