--- a/src/VBox/Storage/testcase/Makefile.kmk
+++ b/src/VBox/Storage/testcase/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 33567 2010-10-28 15:37:21Z alexander.eichner@oracle.com $
+# $Id: Makefile.kmk 33569 2010-10-28 16:08:35Z alexander.eichner@oracle.com $
 ## @file
 # Sub-Makefile for the storage device & driver testcases.
 #
@@ -62,8 +62,8 @@ ifdef VBOX_WITH_TESTCASES
  tstVDShareable_LIBS   = $(LIB_DDU) $(LIB_RUNTIME)
  tstVDSetUuid_LIBS   = $(LIB_DDU) $(LIB_RUNTIME)
  vbox-img_LIBS = \
-	$(VBOX_LIB_RUNTIME_STATIC) \
-	$(PATH_LIB)/StorageLibNoDB$(VBOX_SUFF_LIB)
+	$(PATH_LIB)/StorageLibNoDB$(VBOX_SUFF_LIB) \
+	$(VBOX_LIB_RUNTIME_STATIC)
  if1of ($(KBUILD_TARGET),os2 win)
   vbox-img_LIBS += \
 	$(PATH_LIB)/VBox-liblzf-static$(VBOX_SUFF_LIB) \
