Storage: Another try to fix the burns
svn:sync-xref-src-repo-rev: r67177

--- a/src/VBox/Storage/Makefile.kmk
+++ b/src/VBox/Storage/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 33570 2010-10-28 16:28:16Z alexander.eichner@oracle.com $
+# $Id: Makefile.kmk 33571 2010-10-28 16:32:32Z alexander.eichner@oracle.com $
 ## @file
 # Sub-Makefile for the Storage library.
 #
@@ -29,7 +29,7 @@ endif
 #
 LIBRARIES += StorageLib StorageLibNoDB
 
-StorageLib_TEMPLATE = VBOXR3STATIC
+StorageLib_TEMPLATE = VBOXR3
 StorageLib_DEFS     = IN_VBOXDDU
 StorageLib_SOURCES  = \
 	VD.cpp \
@@ -42,7 +42,7 @@ StorageLib_SOURCES  = \
 	RAW.cpp \
 	VCICache.cpp
 
-StorageLibNoDB_TEMPLATE = VBOXR3STATIC
+StorageLibNoDB_TEMPLATE = VBOXR3
 StorageLibNoDB_DEFS     = IN_VBOXDDU VBOX_HDD_NO_DYNAMIC_BACKENDS
 StorageLibNoDB_SOURCES  = \
 	$(StorageLib_SOURCES)
