--- a/src/VBox/GuestHost/OpenGL/Makefile.kmk
+++ b/src/VBox/GuestHost/OpenGL/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 33561 2010-10-28 14:28:37Z noreply@oracle.com $
+# $Id: Makefile.kmk 33572 2010-10-28 16:39:36Z noreply@oracle.com $
 ## @file
 # Sub-Makefile for the VirtualBox Guest/Host OpenGL part
 #
@@ -88,8 +88,8 @@ VBoxOGLcrutil_LIBS = \
 	$(VBOX_LIB_VBGL_R3_SHARED) \
 	$(VBOX_LIB_IPRT_GUEST_R3_SHARED)
 ifdef VBOX_WITH_CRHGSMI
-VBoxOGLcrutil_DEFS    += VBOX_WITH_CRHGSMI 
-VBoxOGLcrutil_LIBS    += $(VBOX_PATH_ADDITIONS_LIB)/VBoxCrHgsmi$(VBOX_SUFF_LIB)
+VBoxOGLcrutil_DEFS.win.x86    += VBOX_WITH_CRHGSMI 
+VBoxOGLcrutil_LIBS.win.x86    += $(VBOX_PATH_ADDITIONS_LIB)/VBoxCrHgsmi$(VBOX_SUFF_LIB)
 endif
 VBoxOGLcrutil_CLEAN = \
 	$(VBOX_PATH_CROGL_GENFILES)/debug_opcodes.c
