Storage: Disable vbox-img temporary until th Windows burns are fixed
svn:sync-xref-src-repo-rev: r67183

--- a/src/VBox/Storage/testcase/Makefile.kmk
+++ b/src/VBox/Storage/testcase/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 33576 2010-10-28 17:18:17Z alexander.eichner@oracle.com $
+# $Id: Makefile.kmk 33577 2010-10-28 17:29:41Z alexander.eichner@oracle.com $
 ## @file
 # Sub-Makefile for the storage device & driver testcases.
 #
@@ -48,7 +48,7 @@ endif
 # Basic testcases for the VD code.
 #
 ifdef VBOX_WITH_TESTCASES
- PROGRAMS += tstVD tstVD-2 tstVDCopy tstVDSnap tstVDShareable vbox-img
+ PROGRAMS += tstVD tstVD-2 tstVDCopy tstVDSnap tstVDShareable #vbox-img
  tstVD_TEMPLATE = VBOXR3TSTEXE
  tstVD-2_TEMPLATE = VBOXR3TSTEXE
  tstVDCopy_TEMPLATE = VBOXR3TSTEXE
