Storage: Another fix
svn:sync-xref-src-repo-rev: r67187

--- a/src/VBox/Makefile.kmk
+++ b/src/VBox/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 33567 2010-10-28 15:37:21Z alexander.eichner@oracle.com $
+# $Id: Makefile.kmk 33581 2010-10-28 17:42:17Z alexander.eichner@oracle.com $
 ## @file
 # Top-level makefile for src/VBox.
 #
@@ -114,7 +114,8 @@ else  # !VBOX_ONLY_ADDITIONS && !VBOX_ONLY_DOCS
 	HostDrivers \
 	VMM \
 	Devices \
-	Disassembler
+	Disassembler \
+	Storage
 
  ifdef VBOX_WITH_CROGL
   SUBDIRS += GuestHost
