--- a/doc/manual/Makefile.kmk
+++ b/doc/manual/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 33584 2010-10-28 21:05:56Z alexander.eichner@oracle.com $
+# $Id: Makefile.kmk 33585 2010-10-28 21:11:25Z alexander.eichner@oracle.com $
 ## @file
 # Sub-Makefile for the VBox User Manual.
 #
@@ -66,7 +66,7 @@ BLDDIRS += $(VBOX_PATH_MANUAL_OUTBASE)
 ##########################################################################################
 ifdef VBOX_WITH_DOCS
  # Default language
- VBOX_MANUAL_ADD_LANGUAGES = en_US #fr_FR
+ VBOX_MANUAL_ADD_LANGUAGES = en_US fr_FR
 
  if defined(VBOX_ONLY_SDK) || defined(VBOX_WITH_DOCS_SDKREF)
   ## @todo make this an install target, drop the BLDDIRS.
