--- a/doc/manual/Makefile.kmk
+++ b/doc/manual/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 33587 2010-10-29 06:41:30Z noreply@oracle.com $
+# $Id: Makefile.kmk 33588 2010-10-29 06:48:41Z noreply@oracle.com $
 ## @file
 # Sub-Makefile for the VBox User Manual.
 #
@@ -67,7 +67,10 @@ BLDDIRS += $(VBOX_PATH_MANUAL_OUTBASE)
 ifdef VBOX_WITH_DOCS
  # Default language
  VBOX_MANUAL_LANGUAGES = en_US
- VBOX_MANUAL_ADD_LANGUAGES = fr_FR
+
+ ifdef VBOX_WITH_DOCS_TRANSLATIONS
+  VBOX_MANUAL_ADD_LANGUAGES = fr_FR
+ endif
 
  if defined(VBOX_ONLY_SDK) || defined(VBOX_WITH_DOCS_SDKREF)
   ## @todo make this an install target, drop the BLDDIRS.
