--- a/src/VBox/Devices/Makefile.kmk
+++ b/src/VBox/Devices/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 33567 2010-10-28 15:37:21Z alexander.eichner@oracle.com $
+# $Id: Makefile.kmk 33590 2010-10-29 08:55:09Z vitali.pelenjow@oracle.com $
 ## @file
 # Top-level sub-makefile for the devices, drivers and services.
 #
@@ -1082,11 +1082,8 @@ endif # VBOX_WITH_VUSB
 ifdef VBOX_WITH_USB
  Drivers_DEFS         += VBOX_WITH_USB
 
- ifdef VBOX_WITH_VRDP
-  Drivers_DEFS        += VBOX_WITH_VRDP
-  Drivers_SOURCES     += \
-	USB/vrdp/USBProxyDevice-vrdp.cpp
- endif
+ Drivers_SOURCES     += \
+       USB/vrdp/USBProxyDevice-vrdp.cpp
 
  Drivers_DEFS.darwin  += VUSB_HAVE_USBPROXY_DEVICE
  ifdef VBOX_WITH_NEW_USB_CODE_ON_DARWIN
