--- a/src/VBox/Frontends/VBoxBFE/Makefile.kmk
+++ b/src/VBox/Frontends/VBoxBFE/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 32231 2010-09-03 08:22:35Z noreply@oracle.com $
+# $Id: Makefile.kmk 33590 2010-10-29 08:55:09Z vitali.pelenjow@oracle.com $
 ## @file
 # Sub-Makefile for VBoxBFE (a basic frontend which doesn't make use of Main).
 #
@@ -51,9 +51,6 @@ VBoxBFE_TEMPLATE := $(if $(VBOX_WITH_HARDENING),VBOXR3NP,VBOXR3NPEXE)
 #ifdef VBOX_WITH_SECURELABEL
 #VBoxBFE_DEFS += VBOX_SECURELABEL
 #endif
-ifdef VBOX_WITH_VRDP
-VBoxBFE_DEFS += VBOX_WITH_VRDP
-endif
 VBoxBFE_DEFS += VBOXBFE_WITHOUT_COM
 ifdef VBOX_WITH_LINUX_COMPILER_H
 VBoxBFE_DEFS += VBOX_WITH_LINUX_COMPILER_H
