--- a/src/VBox/Frontends/VBoxHeadless/Makefile.kmk
+++ b/src/VBox/Frontends/VBoxHeadless/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 28800 2010-04-27 08:22:32Z noreply@oracle.com $
+# $Id: Makefile.kmk 33590 2010-10-29 08:55:09Z vitali.pelenjow@oracle.com $
 ## @file
 # Sub-Makefile for the headless frontend.
 #
@@ -48,10 +48,7 @@ VBoxHeadlessHardened_NAME = VBoxHeadless
 VBoxHeadless_TEMPLATE  := $(if $(VBOX_WITH_HARDENING),VBOXMAINCLIENTDLL,VBOXMAINCLIENTEXE)
 VBoxHeadless_DEFS       = VBOX_FFMPEG
 VBoxHeadless_SOURCES    = VBoxHeadless.cpp
-ifdef VBOX_WITH_VRDP
- VBoxHeadless_DEFS     += VBOX_WITH_VRDP
- VBoxHeadless_SOURCES  += Framebuffer.cpp
-endif
+VBoxHeadless_SOURCES  += Framebuffer.cpp
 ifdef VBOX_WITH_GUEST_PROPS
  VBoxHeadless_DEFS     += VBOX_WITH_GUEST_PROPS
 endif
