--- a/src/VBox/Frontends/VBoxManage/Makefile.kmk
+++ b/src/VBox/Frontends/VBoxManage/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 33408 2010-10-25 09:57:32Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 33590 2010-10-29 08:55:09Z vitali.pelenjow@oracle.com $
 ## @file
 # Sub-Makefile for VBoxManage (the cli frontend).
 #
@@ -69,8 +69,7 @@ VBoxManage_DEFS      += \
  	$(if $(VBOX_WITH_VBOXSDL), VBOX_WITH_VBOXSDL) \
  	$(if $(VBOX_WITH_VDE), VBOX_WITH_VDE) \
 	$(if $(VBOX_WITH_VIDEOHWACCEL), VBOX_WITH_VIDEOHWACCEL) \
- 	$(if $(VBOX_WITH_VIRTIO),VBOX_WITH_VIRTIO) \
- 	$(if $(VBOX_WITH_VRDP), VBOX_WITH_VRDP)
+ 	$(if $(VBOX_WITH_VIRTIO),VBOX_WITH_VIRTIO)
 
 ifneq ($(KBUILD_TARGET),win)
  # Workaround for buggy gcc-4.3 compilers, see
