--- a/src/VBox/Frontends/VBoxSDL/Makefile.kmk
+++ b/src/VBox/Frontends/VBoxSDL/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 32083 2010-08-30 10:21:57Z noreply@oracle.com $
+# $Id: Makefile.kmk 33590 2010-10-29 08:55:09Z vitali.pelenjow@oracle.com $
 ## @file
 # Sub-Makefile for VBoxSDL (a simple frontend based on SDL).
 #
@@ -58,9 +58,6 @@ else
  ifdef VBOX_WITH_SECURELABEL
   VBoxSDL_DEFS    += VBOX_SECURELABEL
  endif
-endif
-ifdef VBOX_WITH_VRDP
- VBoxSDL_DEFS     += VBOX_WITH_VRDP
 endif
 VBoxSDL_DEFS.freebsd = VBOXSDL_WITH_X11
 VBoxSDL_DEFS.linux = _GNU_SOURCE VBOXSDL_WITH_X11
