VRDE: renamed VRDPServer.h, .cpp to VRDEServer.
svn:sync-xref-src-repo-rev: r67202

--- a/src/VBox/Main/Makefile.kmk
+++ b/src/VBox/Main/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 33590 2010-10-29 08:55:09Z vitali.pelenjow@oracle.com $
+# $Id: Makefile.kmk 33592 2010-10-29 09:36:56Z vitali.pelenjow@oracle.com $
 ## @file
 # Makefile for the VBox Main module.
 #
@@ -317,7 +317,7 @@ VBoxSVC_SOURCES = \
 	DisplayPNGUtil.cpp \
 	DisplayResampleImage.cpp \
 	$(VBOX_AUTOGEN_EVENT_CPP) \
-	VRDPServerImpl.cpp \
+	VRDEServerImpl.cpp \
 	$(if $(VBOX_WITH_XPCOM),xpcom/server.cpp,) \
 	$(VBOX_XML_SCHEMADEFS_CPP) \
 	$(if $(VBOX_WITH_EXTPACK),ExtPackManagerImpl.cpp,)
