wddm/3d: VM settings GUI: display warnings about the VRAM size
svn:sync-xref-src-repo-rev: r67210

--- a/src/VBox/Frontends/VirtualBox/Makefile.kmk
+++ b/src/VBox/Frontends/VirtualBox/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 33542 2010-10-28 09:45:04Z noreply@oracle.com $
+# $Id: Makefile.kmk 33599 2010-10-29 11:14:14Z noreply@oracle.com $
 ## @file
 # Makefile for the VirtualBox Qt GUI.
 #
@@ -146,6 +146,9 @@ ifdef VBOX_WITH_VIRTIO
 endif
 ifdef VBOX_WITH_WDDM
  VirtualBox_DEFS        += VBOX_WITH_WDDM
+endif
+ifdef VBOX_WITH_CRHGSMI
+ VirtualBox_DEFS        += VBOX_WITH_CRHGSMI
 endif
 ifdef VBOX_BLEEDING_EDGE
 VirtualBox_src/selector/VBoxSelectorWnd.cpp_DEFS += \
