--- a/src/VBox/Main/Makefile.kmk
+++ b/src/VBox/Main/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 33623 2010-10-29 16:16:06Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 33624 2010-10-29 16:20:52Z knut.osmundsen@oracle.com $
 ## @file
 # Makefile for the VBox Main module.
 #
@@ -724,6 +724,7 @@ ifdef VBOX_WITH_EXTPACK
  PROGRAMS += VBoxExtPackHelperApp
  VBoxExtPackHelperApp_TEMPLATE = VBoxR3Static
  VBoxExtPackHelperApp_SOURCES = VBoxExtPackHelperApp.cpp
+ VBoxExtPackHelperApp_DEFS = IN_RT_R3
  VBoxExtPackHelperApp_LIBS = \
 	$(VBOX_LIB_RUNTIME_STATIC)
 endif # VBOX_WITH_EXTPACK
