--- a/src/VBox/Main/Makefile.kmk
+++ b/src/VBox/Main/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 33627 2010-10-29 23:12:11Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 33687 2010-11-02 13:05:01Z noreply@oracle.com $
 ## @file
 # Makefile for the VBox Main module.
 #
@@ -635,6 +635,7 @@ VBoxC_SOURCES = \
 	AudioSnifferInterface.cpp \
 	VMMDevInterface.cpp \
 	EventImpl.cpp \
+	BusAssignmentManager.cpp \
 	$(VBOX_AUTOGEN_EVENT_CPP) \
 	$(VBOX_XML_SCHEMADEFS_CPP) \
 	$(if $(VBOX_WITH_EXTPACK),ExtPackManagerImpl.cpp ExtPackUtil.cpp,)
