Main: Added ExtPackManager to Console and implemented the Console and VirtualBox hooks.
svn:sync-xref-src-repo-rev: r67423

--- a/src/VBox/Main/Makefile.kmk
+++ b/src/VBox/Main/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 33693 2010-11-02 14:52:24Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 33784 2010-11-04 16:50:03Z knut.osmundsen@oracle.com $
 ## @file
 # Makefile for the VBox Main module.
 #
@@ -727,7 +727,7 @@ endif # !VBOX_ONLY_SDK (the ifndef is far above)
 #
 # The VBoxExtPackHelperApp.
 #
-if 0 # def VBOX_WITH_EXTPACK
+ifeq ($(LOGNAME),bird) # def VBOX_WITH_EXTPACK
  PROGRAMS += VBoxExtPackHelperApp
  VBoxExtPackHelperApp_TEMPLATE = VBoxR3Static
  VBoxExtPackHelperApp_SOURCES = VBoxExtPackHelperApp.cpp
