iprt/vfs: Hacking in progress.
svn:sync-xref-src-repo-rev: r67465

--- a/src/VBox/Runtime/Makefile.kmk
+++ b/src/VBox/Runtime/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 33815 2010-11-05 21:29:08Z alexander.eichner@oracle.com $
+# $Id: Makefile.kmk 33820 2010-11-07 16:33:23Z knut.osmundsen@oracle.com $
 ## @file
 # Sub-Makefile for the IPRT (IPRT).
 #
@@ -368,6 +368,8 @@ RuntimeR3_SOURCES       = \
 	common/time/time.cpp \
 	common/time/timeprog.cpp \
 	common/time/timesup.cpp \
+	common/vfs/vfsbase.cpp \
+	common/vfs/vfsstdfile.cpp \
 	generic/critsect-generic.cpp \
 	generic/env-generic.cpp \
 	generic/RTDirCreateTemp-generic.cpp \
