iprt: started hacking a gunzip/gzip I/O stream implementation.
svn:sync-xref-src-repo-rev: r67535

--- a/src/VBox/Runtime/Makefile.kmk
+++ b/src/VBox/Runtime/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 33820 2010-11-07 16:33:23Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 33887 2010-11-09 10:49:23Z knut.osmundsen@oracle.com $
 ## @file
 # Sub-Makefile for the IPRT (IPRT).
 #
@@ -370,6 +370,7 @@ RuntimeR3_SOURCES       = \
 	common/time/timesup.cpp \
 	common/vfs/vfsbase.cpp \
 	common/vfs/vfsstdfile.cpp \
+	common/zip/zipgzip.cpp \
 	generic/critsect-generic.cpp \
 	generic/env-generic.cpp \
 	generic/RTDirCreateTemp-generic.cpp \
