More vfs code, new iprt error range..
svn:sync-xref-src-repo-rev: r67606

--- a/src/VBox/Runtime/Makefile.kmk
+++ b/src/VBox/Runtime/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 33887 2010-11-09 10:49:23Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 33945 2010-11-10 17:49:56Z knut.osmundsen@oracle.com $
 ## @file
 # Sub-Makefile for the IPRT (IPRT).
 #
@@ -369,6 +369,7 @@ RuntimeR3_SOURCES       = \
 	common/time/timeprog.cpp \
 	common/time/timesup.cpp \
 	common/vfs/vfsbase.cpp \
+	common/vfs/vfschain.cpp \
 	common/vfs/vfsstdfile.cpp \
 	common/zip/zipgzip.cpp \
 	generic/critsect-generic.cpp \
