iprt: more tar code and vfs filesystem stream bugfixes.
svn:sync-xref-src-repo-rev: r67727

--- a/src/VBox/Runtime/Makefile.kmk
+++ b/src/VBox/Runtime/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 34027 2010-11-12 10:46:49Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 34045 2010-11-12 19:16:09Z knut.osmundsen@oracle.com $
 ## @file
 # Sub-Makefile for the IPRT (IPRT).
 #
@@ -371,6 +371,7 @@ RuntimeR3_SOURCES       = \
 	common/vfs/vfsmisc.cpp \
 	common/vfs/vfsstdfile.cpp \
 	common/zip/tar.cpp \
+	common/zip/tarcmd.cpp \
 	common/zip/tarvfs.cpp \
 	common/zip/gzipvfs.cpp \
 	common/zip/zip.cpp \
