ExtPack: Fixes to IExtPack (QueryInterface can't be used for getting stuff from the ext pack, designed the plug-in interfaces). Bugfixes making 'VBoxManage list extpack' work when building with VBOX_WITH_EXTPACK_PUEL=1.
svn:sync-xref-src-repo-rev: r67761

--- a/src/VBox/Makefile.kmk
+++ b/src/VBox/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 33581 2010-10-28 17:42:17Z alexander.eichner@oracle.com $
+# $Id: Makefile.kmk 34073 2010-11-15 15:38:20Z knut.osmundsen@oracle.com $
 ## @file
 # Top-level makefile for src/VBox.
 #
@@ -80,6 +80,9 @@ else
  if1of ($(KBUILD_TARGET_ARCH), amd64 x86)
   include $(PATH_SUB_CURRENT)/NetworkServices/Makefile.kmk
  endif
+ ifdef VBOX_OSE
+  include $(PATH_SUB_CURRENT)/ExtPacks/Makefile.kmk
+ endif
  ifdef VBOX_WITH_INSTALLER
   include $(PATH_SUB_CURRENT)/Installer/Makefile.kmk 		        # Keep this last.
  endif
@@ -147,6 +150,9 @@ else  # !VBOX_ONLY_ADDITIONS && !VBOX_ONLY_DOCS
 	Frontends \
 	NetworkServices
 
+ ifndef VBOX_OSE
+  SUBDIRS += ExtPacks
+ endif
 
  # This must be the last one.
  ifdef VBOX_WITH_INSTALLER
