--- a/Makefile.kmk
+++ b/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 33747 2010-11-03 18:34:40Z alexander.eichner@oracle.com $
+# $Id: Makefile.kmk 34075 2010-11-15 15:59:31Z knut.osmundsen@oracle.com $
 ## @file
 # Top level makefile.
 #
@@ -1165,11 +1165,13 @@ vslick.h: include/VBox/cdefs.h include/iprt/cdefs.h $(MAKEFILE)
 	@$(APPEND) $@.tmp '#define NS_IMETHODIMP_(type)            type '
 	@$(APPEND) $@.tmp '#define PARSERS_EXPORT '
 if1of ($(KBUILD_HOST),win)
+	@$(APPEND) $@.tmp '#define COM_STRUCT_OR_CLASS(I)          struct I '
 	@$(APPEND) $@.tmp '#define STDMETHOD(m)                    virtual HRESULT m '
 	@$(APPEND) $@.tmp '#define STDMETHOD_(type,m)              virtual type m '
 	@$(APPEND) $@.tmp '#define STDMETHODIMP                    HRESULT '
 	@$(APPEND) $@.tmp '#define STDMETHODIMP_(type)             type '
 else
+	@$(APPEND) $@.tmp '#define COM_STRUCT_OR_CLASS(I)          class I '
 	@$(APPEND) $@.tmp '#define STDMETHOD(m)                    virtual nsresult m '
 	@$(APPEND) $@.tmp '#define STDMETHOD_(type,m)              virtual type m '
 	@$(APPEND) $@.tmp '#define STDMETHODIMP                    nsresult '
