PXE: include Etherboot ROM by default and clean up Intel ROM naming
svn:sync-xref-src-repo-rev: r67824

--- a/src/VBox/Devices/Makefile.kmk
+++ b/src/VBox/Devices/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 34100 2010-11-16 10:51:40Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 34115 2010-11-16 14:07:25Z klaus.espenlaub@oracle.com $
 ## @file
 # Top-level sub-makefile for the devices, drivers and services.
 #
@@ -1147,7 +1147,7 @@ ifdef VBOX_WITH_EXTPACK_PUEL
  #
  INSTALLS += VBoxExtPackPuelInsRoms
  VBoxExtPackPuelInsRoms_TEMPLATE = VBoxInsExtPackPuel
- VBoxExtPackPuelInsRoms_SOURCES = PC/PXE/pxepcnet.rom=>PXE-Intel.rom
+ VBoxExtPackPuelInsRoms_SOURCES = PC/PXE/PXE-Intel.rom=>PXE-Intel.rom
 endif # VBOX_WITH_USB && VBOX_WITH_EXTPACK_PUEL
 
 
